{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 171,
  "lineage": "7f385c64-e8a2-aba2-0c08-694f5b8e2f53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382501500:internet-gateway/igw-09b90b983401c6234",
            "id": "igw-09b90b983401c6234",
            "owner_id": "992382501500",
            "tags": {
              "Name": "aws_internet_gateway"
            },
            "tags_all": {
              "Name": "aws_internet_gateway"
            },
            "vpc_id": "vpc-04d2a208115799b08"
          },
          "dependencies": [
            "aws_vpc.levi9_vpc",
            "data.aws_availability_zone.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-090eb3457e5063b29",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "nacl1"
            },
            "tags_all": {
              "Name": "nacl1"
            },
            "vpc_id": "vpc-04d2a208115799b08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.levi9_vpc",
            "data.aws_availability_zone.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382501500:route-table/rtb-00c30ea0ca2fadbd8",
            "id": "rtb-00c30ea0ca2fadbd8",
            "owner_id": "992382501500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b90b983401c6234",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "tags_all": {
              "Name": "Public Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d2a208115799b08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.levi9_vpc",
            "data.aws_availability_zone.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db7a39116d6495a2",
            "route_table_id": "rtb-00c30ea0ca2fadbd8",
            "subnet_id": "subnet-011b2ce5cb76e9b84"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public_subnet_levi9aws",
            "aws_vpc.levi9_vpc",
            "data.aws_availability_zone.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382501500:security-group/sg-09129a1e1d010bd04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09129a1e1d010bd04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "ssh",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240416132521177500000003",
            "name_prefix": "terraform-",
            "owner_id": "992382501500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_administration"
            },
            "tags_all": {
              "Name": "sg_administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d2a208115799b08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.levi9_vpc",
            "data.aws_availability_zone.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382501500:security-group/sg-0fd5318bf0687293a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd5318bf0687293a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240416132521176500000002",
            "name_prefix": "terraform-",
            "owner_id": "992382501500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_web"
            },
            "tags_all": {
              "Name": "sg_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d2a208115799b08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.levi9_vpc",
            "data.aws_availability_zone.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_levi9aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382501500:subnet/subnet-011b2ce5cb76e9b84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011b2ce5cb76e9b84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382501500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet levi9aws"
            },
            "tags_all": {
              "Name": "Public Subnet levi9aws"
            },
            "vpc_id": "vpc-04d2a208115799b08"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.levi9_vpc",
            "data.aws_availability_zone.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "levi9_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382501500:vpc/vpc-04d2a208115799b08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-0c840efe1ee2c7bc3",
            "default_route_table_id": "rtb-0329d558cc8c9c6af",
            "default_security_group_id": "sg-0a2ef83d85714d2e5",
            "dhcp_options_id": "dopt-0abc162cd0b54093a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d2a208115799b08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0329d558cc8c9c6af",
            "owner_id": "992382501500"
          },
          "dependencies": [
            "data.aws_availability_zone.az"
          ]
        }
      ]
    }
  ]
}